// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/Breadcrumbs/Link WithAttributes play-test 1`] = `
<div data-test-block="true">
  <a id="htmlId"
     class="_link_1qzdp_1  dummyClassname"
     lang="nb"
     data-testid="123ID"
     href="#storybook-root"
  >
    Bedrift og organisasjon
  </a>
</div>
`;

exports[`Tester/Breadcrumbs/Link WithRef play-test 1`] = `
<div data-test-block="true">
  <a class="_link_1qzdp_1  "
     href="#storybook-root"
     id="dummyIdForwardedFromRef"
  >
    Bedrift og organisasjon
  </a>
</div>
`;
